--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,17 @@ after_success:
   - docker push blainarm387/multi-nginx
   - docker push blainarm387/multi-server
   - docker push blainarm387/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-west-2-903545748783
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_kd:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
